<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order_svg"
            android:title="@string/nav_menu_order"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_svg"
            android:title="@string/nav_menu_profile"/>
        <item
            android:id="@+id/nav_delivery_time"
            android:icon="@drawable/ic_delivery_svg"
            android:title="@string/nav_menu_delivery"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_svg"
            android:title="@string/nav_menu_logout"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_info_svg"
            android:title="@string/nav_menu_help"/>
    </group>

</menu>
