<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <LinearLayout
        android:id="@+id/wrapper_social_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/lbl_fb"
            style="@style/AppTheme.Normal"
            android:textAllCaps="true"
            android:background="@color/colorFB"
            android:textColor="@color/colorWhite"

            android:gravity="center"
            android:layout_marginRight="@dimen/dp5"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/lbl_google"
            style="@style/AppTheme.Normal"
            android:textAllCaps="true"
            android:background="@color/colorGoogle"
            android:textColor="@color/colorWhite"

            android:gravity="center"
            android:layout_marginLeft="@dimen/dp5"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/btn_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/lbl_instagram"
            style="@style/AppTheme.Normal"
            android:textAllCaps="true"
            android:background="@color/colorGoogle"
            android:textColor="@color/colorWhite"

            android:gravity="center"
            android:layout_marginLeft="@dimen/dp5"
            android:letterSpacing=".1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_devider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_below="@+id/wrapper_social_buttons"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".4"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/lbl_or"
            android:gravity="center"
            style="@style/AppTheme.Title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".4"
            android:background="@color/colorDivider"/>

    </LinearLayout>

</RelativeLayout>